--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <div class="container">
-        <h1 class="main-title"></h1>
-        <h2 class="sub-title"></h2>
+        <h1 class="main-title">DEATH NOTE</h1>
+        <button>Join Players</button>
+        
+        <button>Prueba tu suerte</button>
     </div>
 
 </body>
