--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class ="button-container">
-        <button class ="button1">Join Players</button>
-        <button class ="button2">Prueba tu suerte</button>
-        </div>
+  </head>
+  <body>
+    <div class="containerIndex">
+      <article class="containerButton">
+        <button class="button">Join Players</button>
+        <button class="buttonFooter">Prueba tu suerte</button>
+      </article>
     </div>
-
-</body>
-
+  </body>
 </html>
