--- a/index.html
+++ b/index.html
@@ -13,8 +13,27 @@
         <div class ="button-container">
         <button class ="button1">Join Players</button>
         <button class ="button2">Prueba tu suerte</button>
+        <audio >
+            <source class ="mysong" src="audio/Death Note - L's Theme - Version A (Cut & Looped for an Hour).mp3" type="audio/ogg">
+          </audio>
+          <img class ="music-icon">
         </div>
     </div>
+    <script>
+        let mysong=document.getElementById("mysong")
+        let icon=document.getElementById("music-icon")
+        icon.onclick=function(){
+            if(mysong.paused){
+                mysong.play();
+                icon.src="pause.png";  //means if ny song is paused, ill have to play it with the play method()
+                                        //and of the image it'll display in paused is pause.png
+            }else{
+                mysong.pause();
+                icon.src ="play.png";
+            }
+        }
+    </script>
+
 
 </body>
 
