--- a/popup.html
+++ b/popup.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class ="container-popup">
-        <div class ="prueba"></div>
        <article class="poup" >
-            <p>whatsuu</p> 
+            <ul id="impresionarray">
+                
+            </ul>
             <section class ="input-buton">
-            <input type="text" class="inputNames" value="">
-            <button class ="botton-enviar">Escribir</button>
+            <input type="text" id="inputnombres" class="inputNames" value="">
+            <button class ="botton-enviar" onclick="pushnames(), mostrarnombres()" >Escribir</button>
             </section>
         </article>
-        <div class = "prueba"></div>
     </div>
-    
+    <script src="js\jspopup.js"></script>
 </body>
 </html>
