--- a/paginaDN.html
+++ b/paginaDN.html
@@ -8,13 +8,17 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="pluma"></div>
-      <article class="texto">
-        <p class="causaMuerte">
-          tu amigo y vecino spiderman muere a causa del guantele de thanos.
-        </p>
-        <p class="nombre">Petter Paker</p>
+    <div class="containerDN">
+      <article class="hoja">
+        <section class="texto">
+          <p class="causaMuerte">
+            tu amigo y vecino spiderman muere a causa del guantele de thanos.
+          </p>
+          <p class="nombre">Petter Paker</p>
+        </section>
+        <section class="flexPluma">
+          <div class="pluma"></div>
+        </section>
       </article>
     </div>
   </body>
