--- a/paginaDN.html
+++ b/paginaDN.html
@@ -11,15 +11,16 @@
     <div class="containerDN">
       <article class="hoja">
         <section class="texto">
-          <p class="causaMuerte">
+          <p class ="causaMuerte" id ="causaMortal">
             tu amigo y vecino spiderman muere a causa del guantele de thanos.
           </p>
-          <p class="nombre">Petter Paker</p>
+          <p class="nombre" id="victima"></p>
         </section>
         <section class="flexPluma">
           <div class="pluma"></div>
         </section>
       </article>
     </div>
+    <script src="./js/random.js"></script>
   </body>
 </html>
