--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <iframe src="audio\L s theme A_48k.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+    </iframe>
     <div class="containerIndex">
       <article class="containerButton">
         <button class="button">Join Players</button>
