--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class ="container-popup">
+    <div id="popup" class ="container-popup">
        <article class="poup" >
+           <img src="img\x_cross_delete_remove_icon_144023.svg" onclick="cerrarpopup()" class="cruzcerrar" alt="" srcset="">
             <ul id="impresionarray">
                 
             </ul>
