--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
   <body>
     <iframe src="audio\L s theme A_48k.mp3" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe>
+    <div id="popup" class ="container-popup">
+      <article class="poup" >
+          <img src="img\x_cross_delete_remove_icon_144023.svg" onclick="cerrarpopup()" class="cruzcerrar" alt="" srcset="">
+           <ul id="impresionarray">
+               
+           </ul>
+           <section class ="input-buton">
+           <input type="text" id="inputnombres" class="inputNames" value="">
+           <button class ="botton-enviar" onclick="pushnames(), mostrarnombres()" >Escribir</button>
+           </section>
+       </article>
+   </div>
     <div class="containerIndex">
       <article class="containerButton">
-        <button class="button">Join Players</button>
+        <button class="button" onclick="abrirpopup()" >Join Players</button>
         <button class="buttonFooter">Prueba tu suerte</button>
       </article>
     </div>
+   <script src="js\jspopup.js"></script>
   </body>
 </html>
