function delete name

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <button class="buttonFooter">Prueba tu suerte</button>
       </article>
     </div>
+    <script src="/Fortune-Wheel/js/botones.js"></script>
   </body>
 </html>
