--- a/popup.html
+++ b/popup.html
@@ -20,5 +20,6 @@
         </article>
     </div>
     <script src="js\jspopup.js"></script>
+    <script src="/Fortune-Wheel/js/botones.js"></script>
 </body>
 </html>
