--- a/paginaDN.html
+++ b/paginaDN.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="containerDN">
-      <img src="img\x_cross_delete_remove_icon_144023.svg" onclick="cerrarpopup()" class="volvermenucruz" alt="" srcset="">
+      <a class="volvermenucruz" href="index.html"><img src="img\x_cross_delete_remove_icon_144023.svg"  alt="" srcset=""></a> 
       <article class="hoja">
         <section class="texto">
           <p class ="causaMuerte" id ="causaMortal">
