--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <button>Prueba tu suerte></button>
               </a>
             </article>
-            <audio autoplay loop hidden>
-              <source src="audio/audio.wav" type="mp3/wav">
-            </audio>
+            <audio id="mysong">
+              <source src ="eminem.mp3" type="audio/mp3">
+      
+          </audio>
         
         </div>
     </div>
